<resources>
    <string name="app_name">Transport Manager</string>
    <string name="admin">Admin</string>
    <string name="user">User</string>
    <string name="welcome_to_transport_manager">Welcome to Transport Manager</string>
    <string name="admin_login_page">Admin Login Page</string>
    <string name="username">username...</string>
    <string name="password">password...</string>
    <string name="login">Login</string>
    <string name="title_activity_routes_main">RoutesMainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>